<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Account.Add_Address_Activity">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#F2F2F2"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_required"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#2C4AFB"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addAddressFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#F2F2F2"
                    android:inputType="text"
                    android:textSize="13sp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#F2F2F2"
            android:layout_marginTop="10sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_required"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#2C4AFB"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addAddressPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#F2F2F2"
                    android:inputType="number"
                    android:textSize="13sp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvEnableGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enable_location_gps_on_your_app_to_proceed"
            android:textColor="@color/red"
            android:layout_marginTop="8dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundColor="#F2F2F2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode_required"
                    app:hintTextColor="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="#2C4AFB"
                    android:inputType="number"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addAddressPincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="#F2F2F2"
                        android:inputType="number"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnUseMyLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#6055D8"
                android:text="@string/use_my_location"
                android:drawablePadding="8dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5sp"
                app:boxBackgroundColor="#F2F2F2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state_required"
                    app:hintTextColor="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="#2C4AFB"
                    android:inputType="number"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addAddressState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="#F2F2F2"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5sp"
                app:boxBackgroundColor="#F2F2F2"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_required"
                    app:hintTextColor="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="#2C4AFB"
                    android:inputType="number"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addAddressCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="#F2F2F2"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#F2F2F2"
            android:layout_marginTop="10sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/house_no_building_name_required"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#2C4AFB"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addAddressHouseNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#F2F2F2"
                    android:inputType="text"
                    android:textSize="13sp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#F2F2F2"
            android:layout_marginTop="10sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/road_name_area_colony_required"
                app:hintTextColor="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#2C4AFB"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addAddressRoadName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#F2F2F2"
                    android:inputType="text"
                    android:textSize="13sp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/types_of_address"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rgAddressType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home" />

                <RadioButton
                    android:id="@+id/rbWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/work" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/isDefaultCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_str"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_check_if_you_add_your_first_address"
                    android:textSize="10sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/red"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/save_address"
            android:background="@drawable/btn"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:padding="12dp"
            android:layout_marginTop="16dp"/>

        <ProgressBar
            android:id="@+id/addressProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner_id"/>


    </LinearLayout>

</LinearLayout>